as department dark mode fixed

--- a/src/app/pages/department/as/as.component.scss
+++ b/src/app/pages/department/as/as.component.scss
@@ -1,7 +1,17 @@
 :host .red-title {
     color: #b1040e;
   }
-  .dark-mode .border-danger{
-    border-color: #fff !important;
+  .dark-mode .red-title{
+    color: #fff;
   }
-  
+  .dark-mode{
+    color: #fff;
+  }
+  .dark-mode th, .dark-mode td{
+    background-color: #333;
+    color: #fff;
+      }
+      .dark-mode .border-danger{
+        border-color: #fff !important;
+      }
+      
